--- a/ObserverWeather/ObserverWeather.csproj
+++ b/ObserverWeather/ObserverWeather.csproj
@@ -43,12 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Observer\DisplayCurrent.cs" />
+    <Compile Include="Observer\DisplayForecast.cs" />
+    <Compile Include="Observer\DisplayStatistics.cs" />
+    <Compile Include="Observer\IObserver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WeatherData.cs" />
+    <Compile Include="Subject\ISubject.cs" />
+    <Compile Include="Subject\WeatherData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
